REFACTORED: Refactored The TestCases Using Mockito